# cookiecutter-python-dev

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json  post_create_script.sh
