[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.extras_require]
dev = pre-commit; pytest; pytest-cov

[options.packages.find]
where = src